vpc.yaml
Description: AWS Cloudformation For VPC Template
Mappings:
  AWSenvtoVPC:
    Growth-Dev:
      vpc: 10.0.0.0/24
    Growth-Prod:
      vpc: 10.2.0.0/18
    Growth-Stage:
      vpc: 10.1.0.0/18
  AWSenvtoVPCcidrblock:
    Growth-Dev:
      cidrblockhost: '16'
      cidrblocksubnet: '4'
    Growth-Prod:
      cidrblockhost: '16'
      cidrblocksubnet: '8'
    Growth-Stage:
      cidrblockhost: '16'
      cidrblocksubnet: '8'
  AWSenvtoVPCdns:
    Growth-Dev:
      dnshostnamesenabled: 'False'
    Growth-Prod:
      dnshostnamesenabled: 'True'
    Growth-Stage:
      dnshostnamesenabled: 'True'
Parameters:
  AWSenv:
    AllowedValues:
      - Growth-Dev
      - Growth-Stage
      - Growth-Prod
    Default: Growth-Dev
    Description: AWS Environment Type
    Type: String
Resources:
  AttachGateway:
    Properties:
      InternetGatewayId: !Ref 'InternetGateway'
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::VPCGatewayAttachment
  EIP1:
    Properties:
      Domain: vpc
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -NatGW-EIP-1
    Type: AWS::EC2::EIP
  EIP2:
    Properties:
      Domain: vpc
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -NatGW-EIP-2
    Type: AWS::EC2::EIP
  EIP3:
    Properties:
      Domain: vpc
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -NatGW-EIP-3
    Type: AWS::EC2::EIP
  InternetGateway:
    Properties:
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -IG
    Type: AWS::EC2::InternetGateway
  MainRouteTable:
    Properties:
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -Public-RT
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::RouteTable
  PrivateRouteTable:
    Properties:
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -Private-RT
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::RouteTable
  ProtectedRouteTable1:
    Properties:
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -Protected-RT1
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::RouteTable
  ProtectedRouteTable2:
    Properties:
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -Protected-RT2
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::RouteTable
  ProtectedRouteTable3:
    Properties:
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -Protected-RT3
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::RouteTable
  PublicSubnet1:
    Properties:
      AvailabilityZone: !Select
        - 0
        - !GetAZs
          Ref: AWS::Region
      CidrBlock: !Select
        - 0
        - !Cidr
          - !GetAtt 'VPC.CidrBlock'
          - !FindInMap
            - AWSenvtoVPCcidrblock
            - !Ref 'AWSenv'
            - cidrblockhost
          - !FindInMap
            - AWSenvtoVPCcidrblock
            - !Ref 'AWSenv'
            - cidrblocksubnet
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -PublicSubnet1
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::Subnet
  PublicSubnet2:
    Properties:
      AvailabilityZone: !Select
        - 1
        - !GetAZs
          Ref: AWS::Region
      CidrBlock: !Select
        - 1
        - !Cidr
          - !GetAtt 'VPC.CidrBlock'
          - !FindInMap
            - AWSenvtoVPCcidrblock
            - !Ref 'AWSenv'
            - cidrblockhost
          - !FindInMap
            - AWSenvtoVPCcidrblock
            - !Ref 'AWSenv'
            - cidrblocksubnet
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -PublicSubnet2
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::Subnet
  PublicSubnet3:
    Properties:
      AvailabilityZone: !Select
        - 2
        - !GetAZs
          Ref: AWS::Region
      CidrBlock: !Select
        - 2
        - !Cidr
          - !GetAtt 'VPC.CidrBlock'
          - !FindInMap
            - AWSenvtoVPCcidrblock
            - !Ref 'AWSenv'
            - cidrblockhost
          - !FindInMap
            - AWSenvtoVPCcidrblock
            - !Ref 'AWSenv'
            - cidrblocksubnet
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -PublicSubnet3
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::Subnet
  Route:
    DependsOn: AttachGateway
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'InternetGateway'
      RouteTableId: !Ref 'MainRouteTable'
    Type: AWS::EC2::Route
  SubnetPublicToRouteTableAttachment1:
    Properties:
      RouteTableId: !Ref 'MainRouteTable'
      SubnetId: !Ref 'PublicSubnet1'
    Type: AWS::EC2::SubnetRouteTableAssociation
  SubnetPublicToRouteTableAttachment2:
    Properties:
      RouteTableId: !Ref 'MainRouteTable'
      SubnetId: !Ref 'PublicSubnet2'
    Type: AWS::EC2::SubnetRouteTableAssociation
  SubnetPublicToRouteTableAttachment3:
    Properties:
      RouteTableId: !Ref 'MainRouteTable'
      SubnetId: !Ref 'PublicSubnet3'
    Type: AWS::EC2::SubnetRouteTableAssociation
  SubnetprivateToRouteTableAttachment1:
    Properties:
      RouteTableId: !Ref 'PrivateRouteTable'
      SubnetId: !Ref 'privateSubnet1'
    Type: AWS::EC2::SubnetRouteTableAssociation
  SubnetprivateToRouteTableAttachment2:
    Properties:
      RouteTableId: !Ref 'PrivateRouteTable'
      SubnetId: !Ref 'privateSubnet2'
    Type: AWS::EC2::SubnetRouteTableAssociation
  SubnetprivateToRouteTableAttachment3:
    Properties:
      RouteTableId: !Ref 'PrivateRouteTable'
      SubnetId: !Ref 'privateSubnet3'
    Type: AWS::EC2::SubnetRouteTableAssociation
  SubnetprotectedToRouteTableAttachment1:
    Properties:
      RouteTableId: !Ref 'ProtectedRouteTable1'
      SubnetId: !Ref 'protectedSubnet1'
    Type: AWS::EC2::SubnetRouteTableAssociation
  SubnetprotectedToRouteTableAttachment2:
    Properties:
      RouteTableId: !Ref 'ProtectedRouteTable2'
      SubnetId: !Ref 'protectedSubnet2'
    Type: AWS::EC2::SubnetRouteTableAssociation
  SubnetprotectedToRouteTableAttachment3:
    Properties:
      RouteTableId: !Ref 'ProtectedRouteTable3'
      SubnetId: !Ref 'protectedSubnet3'
    Type: AWS::EC2::SubnetRouteTableAssociation
  VPC:
    Properties:
      CidrBlock: !FindInMap
        - AWSenvtoVPC
        - !Ref 'AWSenv'
        - vpc
      EnableDnsHostnames: !FindInMap
        - AWSenvtoVPCdns
        - !Ref 'AWSenv'
        - dnshostnamesenabled
      EnableDnsSupport: true
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Ref 'AWSenv'
    Type: AWS::EC2::VPC
  natRoute1:
    DependsOn: natgatway1
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'natgatway1'
      RouteTableId: !Ref 'ProtectedRouteTable1'
    Type: AWS::EC2::Route
  natRoute2:
    DependsOn: natgatway2
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'natgatway2'
      RouteTableId: !Ref 'ProtectedRouteTable2'
    Type: AWS::EC2::Route
  natRoute3:
    DependsOn: natgatway3
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'natgatway3'
      RouteTableId: !Ref 'ProtectedRouteTable3'
    Type: AWS::EC2::Route
  natgatway1:
    Properties:
      AllocationId: !GetAtt 'EIP1.AllocationId'
      SubnetId: !Ref 'protectedSubnet1'
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -NatGW-1
    Type: AWS::EC2::NatGateway
  natgatway2:
    Properties:
      AllocationId: !GetAtt 'EIP2.AllocationId'
      SubnetId: !Ref 'protectedSubnet2'
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -NatGW-2
    Type: AWS::EC2::NatGateway
  natgatway3:
    Properties:
      AllocationId: !GetAtt 'EIP3.AllocationId'
      SubnetId: !Ref 'protectedSubnet3'
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -NatGW-3
    Type: AWS::EC2::NatGateway
  privateSubnet1:
    Properties:
      AvailabilityZone: !Select
        - 0
        - !GetAZs
          Ref: AWS::Region
      CidrBlock: !Select
        - 4
        - !Cidr
          - !GetAtt 'VPC.CidrBlock'
          - !FindInMap
            - AWSenvtoVPCcidrblock
            - !Ref 'AWSenv'
            - cidrblockhost
          - !FindInMap
            - AWSenvtoVPCcidrblock
            - !Ref 'AWSenv'
            - cidrblocksubnet
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -pvtSubnet1
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::Subnet
  privateSubnet2:
    Properties:
      AvailabilityZone: !Select
        - 1
        - !GetAZs
          Ref: AWS::Region
      CidrBlock: !Select
        - 5
        - !Cidr
          - !GetAtt 'VPC.CidrBlock'
          - !FindInMap
            - AWSenvtoVPCcidrblock
            - !Ref 'AWSenv'
            - cidrblockhost
          - !FindInMap
            - AWSenvtoVPCcidrblock
            - !Ref 'AWSenv'
            - cidrblocksubnet
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -pvtSubnet2
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::Subnet
  privateSubnet3:
    Properties:
      AvailabilityZone: !Select
        - 2
        - !GetAZs
          Ref: AWS::Region
      CidrBlock: !Select
        - 6
        - !Cidr
          - !GetAtt 'VPC.CidrBlock'
          - !FindInMap
            - AWSenvtoVPCcidrblock
            - !Ref 'AWSenv'
            - cidrblockhost
          - !FindInMap
            - AWSenvtoVPCcidrblock
            - !Ref 'AWSenv'
            - cidrblocksubnet
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -pvtSubnet3
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::Subnet
  protectedSubnet1:
    Properties:
      AvailabilityZone: !Select
        - 0
        - !GetAZs
          Ref: AWS::Region
      CidrBlock: !Select
        - 8
        - !Cidr
          - !GetAtt 'VPC.CidrBlock'
          - !FindInMap
            - AWSenvtoVPCcidrblock
            - !Ref 'AWSenv'
            - cidrblockhost
          - !FindInMap
            - AWSenvtoVPCcidrblock
            - !Ref 'AWSenv'
            - cidrblocksubnet
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -protectedSubnet1
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::Subnet
  protectedSubnet2:
    Properties:
      AvailabilityZone: !Select
        - 1
        - !GetAZs
          Ref: AWS::Region
      CidrBlock: !Select
        - 9
        - !Cidr
          - !GetAtt 'VPC.CidrBlock'
          - !FindInMap
            - AWSenvtoVPCcidrblock
            - !Ref 'AWSenv'
            - cidrblockhost
          - !FindInMap
            - AWSenvtoVPCcidrblock
            - !Ref 'AWSenv'
            - cidrblocksubnet
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -protectedSubnet2
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::Subnet
  protectedSubnet3:
    Properties:
      AvailabilityZone: !Select
        - 2
        - !GetAZs
          Ref: AWS::Region
      CidrBlock: !Select
        - 10
        - !Cidr
          - !GetAtt 'VPC.CidrBlock'
          - !FindInMap
            - AWSenvtoVPCcidrblock
            - !Ref 'AWSenv'
            - cidrblockhost
          - !FindInMap
            - AWSenvtoVPCcidrblock
            - !Ref 'AWSenv'
            - cidrblocksubnet
      Tags:
        - Key: Environment
          Value: !Ref 'AWSenv'
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWSenv'
              - -protectedSubnet3
      VpcId: !Ref 'VPC'
    Type: AWS::EC2::Subnet
